--- a/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
+++ b/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,8 @@
       "county_lookup.csv\n",
       "You have entered county_lookup.csv, is that correct? [y/n]\n",
       "y\n",
-      "Great!\n"
+      "Great!\n",
+      "This also worked\n"
      ]
     }
    ],
@@ -119,25 +120,35 @@
     "def cleardir():\n",
     "    cleardir.path = '/Users/nsandova/dsgrid-project-StandardScenarios/dsgrid_project/datasets/sector_models/resstock'\n",
     "    cleardir.dimension_path = '/Users/nsandova/dsgrid-project-StandardScenarios/dsgrid_project/datasets/sector_models/resstock/dimensions'\n",
+    "    cleardir.supplemental_dimension_path = '/Users/nsandova/dsgrid-project-StandardScenarios/dsgrid_project/datasets/sector_models/resstock/dimensions/supplemental'\n",
     "    cleardir.sources_path = '/Users/nsandova/dsgrid-project-StandardScenarios/dsgrid_project/datasets/sector_models/resstock/sources'\n",
     "    cleardir.utils_path = '/Users/nsandova/dsgrid-project-StandardScenarios/dsgrid_project/datasets/sector_models/resstock/utils'\n",
     "    cleardir.dimension_mappings_path = '/Users/nsandova/dsgrid-project-StandardScenarios/dsgrid_project/dimension_mappings'\n",
+    "    \n",
     "    isdir1 = os.path.isdir(cleardir.dimension_path)\n",
     "    if isdir1 == True:\n",
     "        shutil.rmtree(cleardir.dimension_path)\n",
     "        os.mkdir(cleardir.dimension_path)\n",
     "    else:\n",
     "        os.mkdir(cleardir.dimension_path)\n",
+    "    \n",
     "    isdir2 = os.path.isdir(cleardir.dimension_mappings_path)\n",
     "    if isdir2 == True:\n",
     "        shutil.rmtree(cleardir.dimension_mappings_path)\n",
     "        os.mkdir(cleardir.dimension_mappings_path)\n",
+    "    else:\n",
+    "        os.mkdir(cleardir.dimension_mappings_path)\n",
+    "    \n",
+    "    isdir3 = os.path.isdir(cleardir.supplemental_dimension_path)\n",
+    "    if isdir3 == True:\n",
+    "        shutil.rmtree(cleardir.supplemental_dimension_path)\n",
+    "        os.mkdir(cleardir.supplemental_dimension_path)\n",
     "        os.chdir(cleardir.sources_path)\n",
     "        return\n",
     "    else:\n",
-    "        os.mkdir(cleardir.dimension_mappings_path)\n",
+    "        os.mkdir(cleardir.supplemental_dimension_path)\n",
     "        os.chdir(cleardir.sources_path)\n",
-    "        return \n",
+    "        return\n",
     "\n",
     "# Need to build out S3 directions \n",
     "\n",
@@ -148,6 +159,8 @@
     "cleardir()\n",
     "\n",
     "##Translate inputted file into appropriate dataframes\n",
+    "# Change to sources directory\n",
+    "os.chdir(cleardir.sources_path)\n",
     "\n",
     "# Read parquet file\n",
     "timeseries = pq.read_table(initialize_timeseries.file)\n",
@@ -224,8 +237,43 @@
     "sectors_df = pd.DataFrame(initialize_model.sector, columns = ['id','name'])\n",
     "sectors_df.drop([1], axis=0, inplace = True)\n",
     "\n",
+    "## Create model year dataframe\n",
+    "model_year = list(range(2010, 2052, 2))\n",
+    "model_year_csv = {'id':model_year,'name':model_year}\n",
+    "model_year_df = pd.DataFrame(model_year_csv)\n",
+    "\n",
+    "## Create scenario dataframe\n",
+    "scenarios_id = [\"reference\"]\n",
+    "scenarios_name = [\"Reference\"]\n",
+    "scenarios_csv = {'id':scenarios_id,'name':scenarios_name}\n",
+    "scenarios_df = pd.DataFrame(scenarios_csv)\n",
+    "\n",
+    "## Create subsectors dataframe\n",
+    "subsectors_df = pd.read_csv(\"Geometry_Building_Type_ACS.tsv\", sep='\\t')\n",
+    "subsectors_column = list(subsectors_df.columns)\n",
+    "del subsectors_column[10:13]\n",
+    "del subsectors_column[0]\n",
+    "\n",
+    "subsectors_scrape = []\n",
+    "for i in subsectors_column:  \n",
+    "    subsectors_partition = i.partition('=')[-1]\n",
+    "    subsectors_scrape.append(subsectors_partition)\n",
+    "\n",
+    "subsectors_num = len(subsectors_scrape)\n",
+    "subsectors_id = []\n",
+    "for i in range(0,subsectors_num):\n",
+    "    subsectors_id.append(i)\n",
+    "\n",
+    "subsectors_csv = {'id':subsectors_id,'name':subsectors_scrape}\n",
+    "subsectors_df = pd.DataFrame(subsectors_csv)\n",
+    "\n",
+    "## Create scenario dataframe\n",
+    "weather_id = [\"2012\"]\n",
+    "weather_name = [\"2012\"]\n",
+    "weather_years_csv = {'id':weather_id,'name':weather_name}\n",
+    "weather_years_df = pd.DataFrame(weather_years_csv)\n",
+    "\n",
     "## Create mapping dataframes\n",
-    "# Create name column\n",
     "fips_short = []\n",
     "for i in fips:\n",
     "    fips_partition = i.partition('G')[-1]\n",
@@ -250,6 +298,23 @@
     "# Create county.csv file\n",
     "county_final_df.to_csv('counties.csv', index = False)\n",
     "\n",
+    "# Create model_year.csv file\n",
+    "model_year_df.to_csv('model_year.csv', index = False)\n",
+    "\n",
+    "# Create scenarios.csv\n",
+    "scenarios_df.to_csv('scenarios.csv', index = False)\n",
+    "\n",
+    "# Create subsectors.csv\n",
+    "subsectors_df.to_csv('subsectors.csv', index = False)\n",
+    "\n",
+    "# Create subsectors.csv\n",
+    "weather_years_df.to_csv('weather_years.csv', index = False)\n",
+    "\n",
+    "# Change to supplemental directory\n",
+    "os.chdir(cleardir.supplemental_dimension_path)\n",
+    "\n",
+    "# Create subsectors.csv\n",
+    "weather_years_df.to_csv('weather_years.csv', index = False)\n",
     "\n",
     "## Create .toml file\n",
     "# Change to sources directory\n",
