Removed census region/division .csv files and updated script

--- a/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
+++ b/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -316,10 +316,11 @@
     "\n",
     "# Change to supplemental directory\n",
     "shutil.copytree(cleardir.sources_supplemental_path, cleardir.supplemental_dimension_path)\n",
-    "#os.chdir(cleardir.sources_supplemental_path)\n",
-    "#files = ['census_divisions.csv', 'census_regions.csv', 'states.csv']\n",
-    "#for f in files:\n",
-    "    #shutil.copy(f, 'cleardir.sources_supplemental_path')\n",
+    "\n",
+    "#Deletes the census region/divison supplemental dimensions .csv files \n",
+    "os.chdir(cleardir.supplemental_dimension_path)\n",
+    "os.remove(\"census_divisions.csv\")\n",
+    "os.remove(\"census_regions.csv\")\n",
     "\n",
     "## Create .toml file\n",
     "# Change to sources directory\n",
