Updated script/notebook to use RECS not ACS for subsectors

--- a/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
+++ b/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
@@ -2,28 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What model was used to create these results?\n",
-      "resstock\n",
-      "You have entered resstock, is that correct? [y/n]\n",
-      "y\n",
+      "What model was used to create these results?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " resstock\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have entered resstock, is that correct? [y/n]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Great!\n",
-      "Input the timeseries results file\n",
-      "group0.parquet\n",
-      "You have entered group0.parquet, is that correct? [y/n]\n",
-      "y\n",
+      "Input the timeseries results file\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " group0.parquet\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have entered group0.parquet, is that correct? [y/n]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Great!\n",
-      "Input the county lookup table file\n",
-      "county_lookup.csv\n",
-      "You have entered county_lookup.csv, is that correct? [y/n]\n",
-      "y\n",
-      "Great!\n"
+      "Input the county lookup table file\n"
      ]
     }
    ],
@@ -247,10 +291,10 @@
     "scenarios_df = pd.DataFrame(scenarios_csv)\n",
     "\n",
     "## Create subsectors dataframe\n",
-    "subsectors_df = pd.read_csv(\"Geometry_Building_Type_ACS.tsv\", sep='\\t')\n",
+    "subsectors_df = pd.read_csv(\"Geometry_Building_Type_RECS.tsv\", sep='\\t')\n",
     "subsectors_column = list(subsectors_df.columns)\n",
-    "del subsectors_column[10:13]\n",
     "del subsectors_column[0]\n",
+    "del subsectors_column[5:8]\n",
     "\n",
     "subsectors_scrape = []\n",
     "for i in subsectors_column:  \n",
@@ -343,6 +387,13 @@
     "# Create resstock_county_to_dsgrid_county.csv\n",
     "county_mapping_df.to_csv('resstock_county_to_dsgrid_county.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
