Updated script/notebook for enduse id column

--- a/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
+++ b/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
@@ -2,13 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "What model was used to create these results?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " resstock\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have entered resstock, is that correct? [y/n]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okay. Let's try again.\n",
+      "What model was used to create these results?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " poop\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have entered poop, is that correct? [y/n]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input. Let's try again.\n",
       "What model was used to create these results?\n"
      ]
     },
@@ -68,6 +126,34 @@
      "text": [
       "Great!\n",
       "Input the county lookup table file\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " county_lookup.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have entered county_lookup.csv, is that correct? [y/n]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Great!\n"
      ]
     }
    ],
@@ -212,13 +298,9 @@
     "\n",
     "## Create enduse dataframe\n",
     "column = list(timeseries_df.columns)\n",
-    "enduse = [s for s in column if s.startswith('electricity') or s.startswith('fuel_oil') or s.startswith('natural_gas') or s.startswith('propane')or s.startswith('wood_heating')]\n",
     "\n",
-    "# Create name column for enduse dataframe\n",
-    "enduse_short = []\n",
-    "for i in enduse:\n",
-    "    enduse_partition = i.rpartition('_')[0]\n",
-    "    enduse_short.append(enduse_partition)\n",
+    "# Create index column for enduse dataframe\n",
+    "enduse = [s for s in column if s.startswith('electricity') or s.startswith('fuel_oil') or s.startswith('natural_gas') or s.startswith('propane')or s.startswith('wood_heating')]\n",
     "    \n",
     "# Create index column for enduse dataframe\n",
     "num = len(enduse)\n",
@@ -254,7 +336,7 @@
     "    units.append(unit_partition)\n",
     "\n",
     "# Combine id, name, fuel type, and units into final enduse dataframe\n",
-    "enduse_final = {'id':id,'name':enduse_short,'fuel type': fuel_type_final, 'units': units}\n",
+    "enduse_final = {'id':enduse,'name':enduse_short,'fuel type': fuel_type_final, 'units': units}\n",
     "enduse_final_df = pd.DataFrame(enduse_final)\n",
     "\n",
     "\n",
