Updated subsectors.csv file, script and notebook and fixed bug from last commit

--- a/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
+++ b/dsgrid_project/datasets/sector_models/resstock/utils/translation_script.ipynb
@@ -2,157 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What model was used to create these results?\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " resstock\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You have entered resstock, is that correct? [y/n]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " n\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Okay. Let's try again.\n",
-      "What model was used to create these results?\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " poop\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You have entered poop, is that correct? [y/n]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " y\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Invalid input. Let's try again.\n",
-      "What model was used to create these results?\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " resstock\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You have entered resstock, is that correct? [y/n]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " y\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "What model was used to create these results?\n",
+      "resstock\n",
+      "You have entered resstock, is that correct? [y/n]\n",
+      "y\n",
       "Great!\n",
-      "Input the timeseries results file\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " group0.parquet\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You have entered group0.parquet, is that correct? [y/n]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " y\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Input the timeseries results file\n",
+      "group0.parquet\n",
+      "You have entered group0.parquet, is that correct? [y/n]\n",
+      "y\n",
       "Great!\n",
-      "Input the county lookup table file\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " county_lookup.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You have entered county_lookup.csv, is that correct? [y/n]\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " y\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Input the county lookup table file\n",
+      "county_lookup.csv\n",
+      "You have entered county_lookup.csv, is that correct? [y/n]\n",
+      "y\n",
       "Great!\n"
      ]
     }
@@ -302,11 +172,12 @@
     "# Create index column for enduse dataframe\n",
     "enduse = [s for s in column if s.startswith('electricity') or s.startswith('fuel_oil') or s.startswith('natural_gas') or s.startswith('propane')or s.startswith('wood_heating')]\n",
     "    \n",
-    "# Create index column for enduse dataframe\n",
-    "num = len(enduse)\n",
-    "id = []\n",
-    "for i in range(0,num):\n",
-    "    id.append(i)\n",
+    "\n",
+    "# Create name column for enduse dataframe\n",
+    "enduse_short = []\n",
+    "for i in enduse:\n",
+    "    enduse_partition = i.rpartition('_')[0]\n",
+    "    enduse_short.append(enduse_partition)   \n",
     "\n",
     "# Create fuel type column for enduse dataframe\n",
     "fuel_type_scrape = []\n",
@@ -388,7 +259,7 @@
     "for i in range(0,subsectors_num):\n",
     "    subsectors_id.append(i)\n",
     "\n",
-    "subsectors_csv = {'id':subsectors_id,'name':subsectors_scrape}\n",
+    "subsectors_csv = {'id':subsectors_scrape,'name':subsectors_scrape}\n",
     "subsectors_df = pd.DataFrame(subsectors_csv)\n",
     "\n",
     "## Create scenario dataframe\n",
