Completed documentation for PySpark. Addressed review comments

--- a/tempo_project/notebooks/examples-duckdb.ipynb
+++ b/tempo_project/notebooks/examples-duckdb.ipynb
@@ -60,7 +60,7 @@
     "        space = ' ' * 4 * _depth\n",
     "        for partition_name, value, p in get_partitions(filepath):\n",
     "            print(f\"{space}{partition_name}={value}\")\n",
-    "        if (_depth + 1) < print_depth:\n",
+    "        if (not print_depth) or ((_depth + 1) < print_depth):\n",
     "            print_partitions(p, print_depth=print_depth, _depth=_depth+1)\n",
     "\n",
     "def load_table(filepath, tablename):\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "edb7e3c3-84cc-4cc9-a24a-aa9f05a7468b",
    "metadata": {},
    "outputs": [],
@@ -93,8 +93,16 @@
     "metadata = get_metadata(data_dir / dataset_name)\n",
     "assert metadata[\"table_format\"][\"format_type\"] == \"unpivoted\", metadata[\"table_format\"]\n",
     "value_column = metadata[\"table_format\"][\"value_column\"]\n",
-    "columns_by_type = {dim_type: metadata[\"dimensions\"][dim_type][0][\"column_names\"][0] for dim_type in metadata[\"dimensions\"]}\n",
-    "\n",
+    "columns_by_type = {dim_type: metadata[\"dimensions\"][dim_type][0][\"column_names\"][0] for dim_type in metadata[\"dimensions\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bf2c18f-c24d-49c2-a864-46ec8cfd1263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# load data table\n",
     "filepath = data_dir / dataset_name / \"table.parquet\"\n",
     "tablename = \"tbl\"\n",
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "67cb19e6-d0f5-4f71-a907-e0f8a775e9f4",
    "metadata": {},
    "outputs": [
@@ -355,13 +363,62 @@
       "    tempo_project_model_years=2040\n",
       "    tempo_project_model_years=2038\n",
       "    tempo_project_model_years=2032\n",
-      "    tempo_project_model_years=2034\n"
+      "    tempo_project_model_years=2034\n",
+      "        state=MA\n",
+      "        state=KY\n",
+      "        state=NH\n",
+      "        state=MI\n",
+      "        state=CT\n",
+      "        state=NE\n",
+      "        state=IL\n",
+      "        state=MD\n",
+      "        state=WY\n",
+      "        state=RI\n",
+      "        state=CA\n",
+      "        state=MT\n",
+      "        state=MN\n",
+      "        state=TN\n",
+      "        state=NJ\n",
+      "        state=NC\n",
+      "        state=ID\n",
+      "        state=IN\n",
+      "        state=ND\n",
+      "        state=WV\n",
+      "        state=WI\n",
+      "        state=MS\n",
+      "        state=CO\n",
+      "        state=SC\n",
+      "        state=KS\n",
+      "        state=NY\n",
+      "        state=FL\n",
+      "        state=OK\n",
+      "        state=VA\n",
+      "        state=UT\n",
+      "        state=NM\n",
+      "        state=GA\n",
+      "        state=MO\n",
+      "        state=AZ\n",
+      "        state=AR\n",
+      "        state=DC\n",
+      "        state=IA\n",
+      "        state=OR\n",
+      "        state=ME\n",
+      "        state=PA\n",
+      "        state=TX\n",
+      "        state=AL\n",
+      "        state=VT\n",
+      "        state=OH\n",
+      "        state=SD\n",
+      "        state=NV\n",
+      "        state=DE\n",
+      "        state=LA\n",
+      "        state=WA\n"
      ]
     }
    ],
    "source": [
     "filepath = data_dir / dataset_name / \"table.parquet\"\n",
-    "print_partitions(filepath, print_depth=2)"
+    "print_partitions(filepath, print_depth=None)"
    ]
   },
   {
@@ -373,7 +430,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "933eac03b648483a9ef13fe63d498c94",
+       "model_id": "fb860c06429f48488ea08a2b97ef0807",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +445,8 @@
    "source": [
     "# Edit this list of tuples as desired\n",
     "partitions=[\n",
-    "    (\"scenario\", \"reference\")\n",
+    "    (\"scenario\", \"efs_high_ldv\"),\n",
+    "    (\"tempo_project_model_years\", \"2050\")\n",
     "]\n",
     "\n",
     "subset_filepath = filepath\n",
@@ -398,7 +456,7 @@
     "assert subset_filepath.exists(), f\"{subset_filepath} does not exist. Edit `partitions`.\"\n",
     "\n",
     "# load partial data table\n",
-    "tablename = \"tbl2\"\n",
+    "tablename = \"tbl\"\n",
     "load_table(subset_filepath, tablename)\n",
     "duckdb.sql(f\"SELECT * FROM {tablename} LIMIT 5\").df()"
    ]
@@ -420,7 +478,9 @@
    "id": "496ee522-6844-4daf-b8c6-359c30488b51",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: Add delete, insert"
+   ]
   }
  ],
  "metadata": {
@@ -439,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
