Addressing review comments and final spark notebook

--- a/tempo_project/notebooks/examples-duckdb.ipynb
+++ b/tempo_project/notebooks/examples-duckdb.ipynb
@@ -93,7 +93,8 @@
     "metadata = get_metadata(data_dir / dataset_name)\n",
     "assert metadata[\"table_format\"][\"format_type\"] == \"unpivoted\", metadata[\"table_format\"]\n",
     "value_column = metadata[\"table_format\"][\"value_column\"]\n",
-    "columns_by_type = {dim_type: metadata[\"dimensions\"][dim_type][0][\"column_names\"][0] for dim_type in metadata[\"dimensions\"]}"
+    "columns_by_type = {dim_type: metadata[\"dimensions\"][dim_type][0][\"column_names\"][0] \n",
+    "                   for dim_type in metadata[\"dimensions\"] if metadata[\"dimensions\"][dim_type]}"
    ]
   },
   {
