--- a/tempo_project/notebooks/examples-pandas.ipynb
+++ b/tempo_project/notebooks/examples-pandas.ipynb
@@ -193,8 +193,123 @@
     "metadata = get_metadata(data_dir / dataset_name)\n",
     "assert metadata[\"table_format\"][\"format_type\"] == \"unpivoted\", metadata[\"table_format\"]\n",
     "value_column = metadata[\"table_format\"][\"value_column\"]\n",
-    "columns_by_type = {dim_type: metadata[\"dimensions\"][dim_type][0][\"column_names\"][0] for dim_type in metadata[\"dimensions\"]}\n",
-    "\n",
+    "columns_by_type = {dim_type: metadata[\"dimensions\"][dim_type][0][\"column_names\"][0] \n",
+    "                   for dim_type in metadata[\"dimensions\"] if metadata[\"dimensions\"][dim_type]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e7acf46e-3173-4157-8060-e5679818f9ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>tempo_project_model_years</th>\n",
+       "      <th>subsector</th>\n",
+       "      <th>time_est</th>\n",
+       "      <th>weather_2012</th>\n",
+       "      <th>value</th>\n",
+       "      <th>scenario</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>2036</td>\n",
+       "      <td>phev_pickup</td>\n",
+       "      <td>2012-09-28 21:00:00</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>275.109073</td>\n",
+       "      <td>efs_high_ldv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>2036</td>\n",
+       "      <td>phev_pickup</td>\n",
+       "      <td>2012-04-26 21:00:00</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>303.162338</td>\n",
+       "      <td>efs_high_ldv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>2036</td>\n",
+       "      <td>phev_pickup</td>\n",
+       "      <td>2012-05-31 19:00:00</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>200.525958</td>\n",
+       "      <td>efs_high_ldv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>2036</td>\n",
+       "      <td>phev_pickup</td>\n",
+       "      <td>2012-06-09 03:00:00</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>194.369124</td>\n",
+       "      <td>efs_high_ldv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>2036</td>\n",
+       "      <td>phev_pickup</td>\n",
+       "      <td>2012-11-07 18:00:00</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>213.748521</td>\n",
+       "      <td>efs_high_ldv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  state tempo_project_model_years    subsector            time_est  \\\n",
+       "0    CA                      2036  phev_pickup 2012-09-28 21:00:00   \n",
+       "1    CA                      2036  phev_pickup 2012-04-26 21:00:00   \n",
+       "2    CA                      2036  phev_pickup 2012-05-31 19:00:00   \n",
+       "3    CA                      2036  phev_pickup 2012-06-09 03:00:00   \n",
+       "4    CA                      2036  phev_pickup 2012-11-07 18:00:00   \n",
+       "\n",
+       "  weather_2012       value      scenario  \n",
+       "0         2012  275.109073  efs_high_ldv  \n",
+       "1         2012  303.162338  efs_high_ldv  \n",
+       "2         2012  200.525958  efs_high_ldv  \n",
+       "3         2012  194.369124  efs_high_ldv  \n",
+       "4         2012  213.748521  efs_high_ldv  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Load data table\n",
     "filepath = data_dir / dataset_name / \"table.parquet\"\n",
     "df = pd.read_parquet(filepath)\n",
@@ -3834,7 +3949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
